more attempts at bug squashing

--- a/main.css
+++ b/main.css
@@ -137,6 +137,8 @@ footer {
     max-width: 1200px;
     width: 100%;
     margin: 0px auto;
+    margin-top: 100px;
+    font-size: 0.7rem;
     text-align: center;
 }
 
